fix: fixed firefox issue with gear overflowing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -108,6 +108,9 @@ div {
 .pointer {
   cursor: pointer;
 }
+.min-width-0 {
+  min-width: 0;
+}
 #dice-box {
   display: block;
   position: fixed;
